# OpenQuery

./: .eslintrc.json  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: desktop-build.yml  integration-postgres.yml  lint-typecheck.yml  publish-cli.yml  release-desktop.yml  unit-tests.yml
apps/cli/: package.json
apps/cli/scripts/: postpack.mjs  prepack.mjs
apps/cli/src/: argv.ts  errors.ts  main.ts  output.ts
apps/cli/test/: integration.test.mjs  unit.test.mjs
apps/desktop/: index.html  launch.sh  package.json  tsconfig.json  vite.config.ts
apps/desktop/bridge/: handlers.ts  main.ts  tsconfig.json
apps/desktop/src/: App.tsx  api.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: bridge.rs  keychain.rs  main.rs
docs/: ARCHITECTURE.md  CLI_CONTRACT.md  DEMO_DOCKER.md  DEMO_NODOCKER.md  PRODUCT_SPEC.md  README.md  RELEASE_GATE.md  SECURITY.md  THREAT_MODEL.md  TROUBLESHOOTING.md  architecture.md  benchmarks.md  cli.md  demo-nodocker.md  demo-script.md  desktop-smoke.md  dev-setup.md  docker-setup.md  eval.md  power-mode.md  recruiter-demo.md  release-checklist.md  release.md  security.md  smoke.md  threat-model.md  troubleshooting.md
infra/docker/: docker-compose.yml  seed.sql
scripts/: desktop-dev.sh  install-macos-local.sh  smoke-cli.sh  smoke-docker.sh
(+11 files in other folders)
